--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,14 @@
 			<version>1.18.24</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		
+		<dependency>
+    		<groupId>javax.servlet</groupId>
+    		<artifactId>jstl</artifactId>
+    		<version>1.2</version>
+		</dependency>
+
 
 				
 
